修复兼容性问题和版本适用问题