@@ -69,51 +69,14 @@
 
 ### 插件安装
 #### 在线安装
-正在努力中……
-#### 本地安装
-    - 前置条件
-        - 安装Gradle: 本插件使用gradle管理，需要先安装gradle
-    - 下载代码：git clone git地址（下面有）
-    - 进入根目录：cd auto-unit-test
-    - 执行命令：./generatePlugin.sh
-    - 得到结果：
-        ```
-        请确保已经安装了Gradle
-        
-        > Task :compileJava
-        注: /Users/fanxiaogang/Documents/code/unit-test/src/main/java/org/xiaogang/action/dialog/Main.java使用或覆盖了已过时的 API。
-        注: 有关详细信息, 请使用 -Xlint:deprecation 重新编译。
-        注: /Users/fanxiaogang/Documents/code/unit-test/src/main/java/org/xiaogang/util/ObjectTestUtilNew.java使用了未经检查或不安全的操作。
-        注: 有关详细信息, 请使用 -Xlint:unchecked 重新编译。
-        
-        > Task :patchPluginXml
-        [gradle-intellij-plugin :unit.test:patchPluginXml] Patching plugin.xml: attribute `since-build=[201.7223]` of `idea-version` tag will be set to `193.7288`
-        
-        > Task :buildSearchableOptions
-        WARNING: An illegal reflective access operation has occurred
-        WARNING: Illegal reflective access by com.intellij.ide.IdeEventQueue to constructor sun.awt.PostEventQueue(java.awt.EventQueue)
-        WARNING: Please consider reporting this to the maintainers of com.intellij.ide.IdeEventQueue
-        WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
-        WARNING: All illegal access operations will be denied in a future release
-        Starting searchable options index builder
-        2021-04-12 15:44:40,493 [   2288]   WARN - ConfigurableExtensionPointUtil - ignore deprecated groupId: language for id: preferences.language.Kotlin.scripting 
-        Searchable options index builder completed
-        
-        Deprecated Gradle features were used in this build, making it incompatible with Gradle 7.0.
-        Use '--warning-mode all' to show the individual deprecation warnings.
-        See https://docs.gradle.org/6.7.1/userguide/command_line_interface.html#sec:command_line_warnings
-        
-        BUILD SUCCESSFUL in 20s
-        10 actionable tasks: 10 executed
-        插件生成成功：unit.test-0.0.2.zip
+通过marketplace搜索，autoTest，然后安装
 
-        ```
 ### 如何使用
-- 添加pom:配套的pom：主要用来配合生成单测的代码
+- 添加pom:配套的pom：主要用来配合生成单测的代码。这个源码在mudule：unit-test-api中，可以自己打包
 
 ```
 <dependency>
-  <groupId>com.alibaba.cro</groupId>
+  <groupId>org.xiaogang</groupId>
   <artifactId>unit-test-api</artifactId>
   <version>1.0.0-SNAPSHOT</version>
 </dependency> 
